--- a/test.html
+++ b/test.html
@@ -1,1 +1,68 @@
+<html lang="en"></html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" conyrny="IE=edge">
+    <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
+    <title>test.html</title>
+    <style>
+    div {
+         margin:20px;
+    }
+    h1 {
+        display: inline-block;
+        color:green;
+    font-size: 50px;
+    }
+    h2 {
+        display: inline-block;
+        color:yellow;
+    font-size: 50px;
+    }
+    .quadrato { 
+        width: 500px;
+        height: 500px;
+    background-color:blue
+    }
+    .quadrato1 {
+        width: 500px; 
+        height: 500px;
+    background-color:yellow
 
+    }
+    .rettangolo {
+        width: 500px;
+        height: 300px;
+    background-color:brown
+    }
+    .cerchio {
+        width: 500px;
+        background-color:hotpink
+    }
+    .cerchio1 {
+        width: 400px;
+        background: orangered;
+        border-radius: 50%;
+    }
+    .ellisse {
+       width: 280px;
+       height: 200px;
+       background: #00f;
+       border-radius: 50%;
+    }
+    </style>
+    <h1>
+        Contu
+    </h1>
+    <h2>   
+        Marika
+    </h2>
+</head>
+<body>
+    <div class="quadrato"></div>
+    <div class="quadrato1"></div>
+    <div class="rettangolo"></div>
+    <div class="cerchio"></div>
+    <div class="cerchio1"></div>
+    <div class="ellisse"></div>
+</body>
+</html>
